{
  "sourceLanguage" : "en",
  "strings" : {
    "About" : {"localizations":{"es":{"stringUnit":{"state":"translated","value":"Acerca de"}},"fr":{"stringUnit":{"state":"translated","value":"À propos"}},"ja":{"stringUnit":{"state":"translated","value":"情報"}},"zh-Hans":{"stringUnit":{"state":"translated","value":"关于"}}}},
    "Advanced" : {"localizations":{"es":{"stringUnit":{"state":"translated","value":"Avanzado"}},"fr":{"stringUnit":{"state":"translated","value":"Avancé"}},"ja":{"stringUnit":{"state":"translated","value":"詳細"}},"zh-Hans":{"stringUnit":{"state":"translated","value":"高级"}}}},
    "All" : {"localizations":{"es":{"stringUnit":{"state":"translated","value":"Todo"}},"fr":{"stringUnit":{"state":"translated","value":"Tout"}},"ja":{"stringUnit":{"state":"translated","value":"すべて"}},"zh-Hans":{"stringUnit":{"state":"translated","value":"全部"}}}},
    "Apply" : {"localizations":{"es":{"stringUnit":{"state":"translated","value":"Aplicar"}},"fr":{"stringUnit":{"state":"translated","value":"Appliquer"}},"ja":{"stringUnit":{"state":"translated","value":"適用"}},"zh-Hans":{"stringUnit":{"state":"translated","value":"应用"}}}},
    "Auto-correction" : {"localizations":{"es":{"stringUnit":{"state":"translated","value":"Corrección automática"}},"fr":{"stringUnit":{"state":"translated","value":"Correction automatique"}},"ja":{"stringUnit":{"state":"translated","value":"自動修正"}},"zh-Hans":{"stringUnit":{"state":"translated","value":"自动更正"}}}},
    "Check log" : {"localizations":{"es":{"stringUnit":{"state":"translated","value":"Ver registro"}},"fr":{"stringUnit":{"state":"translated","value":"Consulter le journal"}},"ja":{"stringUnit":{"state":"translated","value":"ログを確認"}},"zh-Hans":{"stringUnit":{"state":"translated","value":"查看日志"}}}},
    "Community" : {"localizations":{"es":{"stringUnit":{"state":"translated","value":"Comunidad"}},"fr":{"stringUnit":{"state":"translated","value":"Communauté"}},"ja":{"stringUnit":{"state":"translated","value":"コミュニティ"}},"zh-Hans":{"stringUnit":{"state":"translated","value":"社区"}}}},
    "Copy" : {"localizations":{"es":{"stringUnit":{"state":"translated","value":"Copiar"}},"fr":{"stringUnit":{"state":"translated","value":"Copier"}},"ja":{"stringUnit":{"state":"translated","value":"コピー"}},"zh-Hans":{"stringUnit":{"state":"translated","value":"复制"}}}},
    "Core log" : {"localizations":{"es":{"stringUnit":{"state":"translated","value":"Registro del núcleo"}},"fr":{"stringUnit":{"state":"translated","value":"Journal du noyau"}},"ja":{"stringUnit":{"state":"translated","value":"コアログ"}},"zh-Hans":{"stringUnit":{"state":"translated","value":"核心日志"}}}},
...
