...
    static let languages = [
        LogseqLanguageChoice(id: "system", title: "System"),
        LogseqLanguageChoice(id: "en", title: "English"),
        LogseqLanguageChoice(id: "fr", title: "Français"),
        LogseqLanguageChoice(id: "de", title: "Deutsch"),
        LogseqLanguageChoice(id: "nl", title: "Dutch (Nederlands)"),
        LogseqLanguageChoice(id: "zh-CN", title: "简体中文"),
        LogseqLanguageChoice(id: "zh-Hant", title: "繁體中文"),
        LogseqLanguageChoice(id: "af", title: "Afrikaans"),
        LogseqLanguageChoice(id: "ca", title: "Català"),
        LogseqLanguageChoice(id: "es", title: "Español"),
        LogseqLanguageChoice(id: "vi", title: "Tiếng Việt"),
        LogseqLanguageChoice(id: "nb-NO", title: "Norsk (bokmål)"),
...
