appId: com.logseq.chat
---
- launchApp:
    stopApp: true
- extendedWaitUntil:
    visible:
      id: "journals.graph-loaded"
    timeout: 10000
- assertNotVisible:
    id: "link.sidebar.journals"
- tapOn:
    id: "button.sidebar"
- assertVisible:
    id: "link.sidebar.journals"
- tapOn:
    id: "link.sidebar.journals"
- assertVisible:
    id: "journals.graph-loaded"
- tapOn:
    id: "button.sidebar"
- assertVisible:
    id: "button.graph-switch"
- tapOn:
    id: "button.sidebar.dismiss"
- swipe:
    start: "1%, 50%"
    end: "75%, 50%"
    duration: 500
- assertVisible:
    id: "link.sidebar.journals"
- tapOn:
    id: "link.sidebar.journals"
- assertVisible:
    id: "journals.graph-loaded"
